# cli-email

./: .env.example  .gitignore  README-CN.md  pyproject.toml  requirements-cli.txt  requirements.txt  simple_test.py  standalone_test.py  test_database_direct.py  test_database_functionality.py  test_database_simple.py  test_runner.py
.claude/: settings.local.json
.claude/epics/: chinese-localization-analysis.md
.claude/epics/email-priority-manager/: 2-analysis.md  2.md  3-analysis.md  3.md  4.md  5.md  6-analysis.md  6.md  7.md  8.md  9.md  epic.md  github-mapping.md
.claude/epics/email-priority-manager/updates/2/: stream-a.md  stream-b.md
.claude/epics/email-priority-manager/updates/3/: stream-a.md  stream-b.md
.claude/epics/email-priority-manager/updates/6/: stream-a.md
.claude/prds/: email-priority-manager.md
config/: default.yaml  logging.yaml
requirements/: ai.txt  base.txt  dev.txt
scripts/: setup.py
src/email_priority_manager/: __init__.py  main.py
src/email_priority_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/email_priority_manager/ai/: __init__.py
src/email_priority_manager/cli/: __init__.py  base.py  helpers.py  main.py  progress.py
src/email_priority_manager/cli/commands/: help.py  query.py
src/email_priority_manager/cli/framework/: help.py  setup.py
src/email_priority_manager/cli/utils/: colors.py  logging.py  prompts.py
src/email_priority_manager/config/: __init__.py  models.py  secrets.py  settings.py
src/email_priority_manager/core/: __init__.py
src/email_priority_manager/database/: __init__.py  connection.py  connections.py  indexes.py  models.py  operations.py  queries.py  schema.py  search.py
src/email_priority_manager/database/migrations/: 001_initial_schema.py  __init__.py  migration_manager.py
src/email_priority_manager/utils/: __init__.py  logger.py
tests/: __init__.py  conftest.py  test_database.py  test_database_simple.py
tests/database/: __init__.py  test_indexes.py  test_queries.py  test_schema.py  test_search.py
tests/fixtures/: __init__.py  test_emails.json
tests/integration/: __init__.py
tests/test_cli/: test_base.py  test_help.py  test_main.py  test_progress.py
tests/unit/: __init__.py  test_config.py
